--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
-  floor: any
-  http:
-  flutter_dotenv: any
-  path_provider: ^1.3.0
+  dio: ^4.0.0
   crypto: ^2.1.5
   json_annotation: any
   mqtt_client: any
