--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,17 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.0
+  flutter_statusbarcolor: ^0.2.3
   crypto: ^2.1.5
   json_annotation: any
   mqtt_client: any
+  qr_code_scanner: ^0.4.0
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
