--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
   flutter_statusbarcolor: ^0.2.3
-  crypto: ^2.1.5
+  crypto: ^3.0.0
   json_annotation: any
   mqtt_client: any
   qr_code_scanner: ^0.4.0
