'增加tcpserver小工具'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   qr_code_scanner: ^0.4.0
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.22.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
