--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.22.0
   intl: ^0.17.0
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
